--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:theme="@android:style/Theme.NoTitleBar" >
         <activity
             android:label="@string/app_name"
-            android:name=".activities.CloudyPhoneActivity" >
+            android:name=".controller.activities.CloudyPhoneActivity" >
             <intent-filter >
                 <action android:name="android.intent.action.MAIN" />
 
@@ -24,10 +24,10 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".activities.LoginActivity"
+            android:name=".controller.activities.LoginActivity"
             android:theme="@android:style/Theme.NoTitleBar" />
         <activity
-            android:name=".activities.SignupActivity"
+            android:name=".controller.activities.SignupActivity"
             android:theme="@android:style/Theme.NoTitleBar" />
 
         <!-- Parse Push notification -->
@@ -40,6 +40,14 @@
                 <action android:name="android.intent.action.USER_PRESENT" />
             </intent-filter>
         </receiver>
+
+        <!-- Parse Push receviers -->
+        <!-- Call receiver, will make phone call -->
+        <receiver android:name=".controller.receivers.MakeCallReceiver" >
+            <intent-filter >
+                <action android:name="com.cloudyphone.makecall" />
+            </intent-filter>
+        </receiver>
     </application>
 
     <!-- Permission from Parse -->
@@ -50,5 +58,9 @@
     <!-- Permission to sync -->
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.READ_SMS" />
+
+    <!-- Permissions for push receivers -->
+    <!-- Call receiver -->
+    <uses-permission android:name="android.permission.CALL_PHONE" />
 
 </manifest>
